@@ -13,6 +13,9 @@ debci (1.1.3) UNRELEASED; urgency=medium
       one suite/arch but fails on another suite/arch.
     * fix Status page to not hide all charts when any platform does not have
       enough data
+    * rewrite Status charts page. In special, instead of loading the full
+      history via AJAX, which takes quite a while, embed a reduced view of the
+      data in the HTML itself.
   * Drop debian/tests/worker-max-processes. The original issue was caused by
     (and fixed in) systemd >= 228 (see bug #823530), and the test ended up not
     being very reliable and keeps flapping on CI.
